--- a/src/components/header.css
+++ b/src/components/header.css
@@ -10,7 +10,7 @@
   line-height: 50px;
 } */
 .text_color{
-  color:#fff
+  color:rgb(95, 94, 94)
 }
 
 .header.sticky {
@@ -25,9 +25,11 @@
   position: fixed;
   top: 0;
   left: 0;
+  /* height: 6.3%; */
   /* padding: 10px 15px; */
   width: 100%;
-  background: #fff;
+
+  background: rgb(255, 255, 255);
   box-shadow: 0px 6px 13px 0px rgb(0 0 0 / 6%);
   opacity: 0;
   -webkit-animation: fadeInDown .95s ease-in-out 0s 1 normal none running;
@@ -38,3 +40,5 @@
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
+
+
